# kobo-connect

./: .gitignore  Dockerfile  README.md  example.env  main.py  pyproject.toml  requirements.txt  test_submission.py  utils.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-deploy-dev.yml  build-deploy-prod.yml  docker-build-deploy.yml  pytest.yml  test-submission.yml
clients/: bitrix24_api_client.py  espo_api_client.py
docs/: 121.md  Bitrix24.md  EspoCRM.md  Kobo.md  Utils.md
mappings/: kobo121fieldtypes.csv
routes/: 121_routes.py  espo_routes.py  generic_routes.py  kobo_routes.py  routes121.py  routesBitrix24.py  routesEspo.py  routesGeneric.py  routesKobo.py
test/: post_submission.py
tests/: conftest.py  initclient.py  kobo_data.json  kobo_data_espo.json  kobo_headers.json  kobo_headers_espo.json  post_submission.py  program121.json  test_121program.py  test_Espo.py  test_health.py  test_koboto121.py  test_koboupdate121.py
utils/: 121_utils.py  cosmos.py  espo_utils.py  kobo_utils.py  logger.py  logging.py  utils121.py  utilsEspo.py  utilsKobo.py
