[tool.poetry]
name = "kobo-connect"
version = "0.0.2"
authors = [
  "Jacopo Margutti <jmargutti@redcross.nl>"
]
description = "kobo-connect"
readme = "README.md"
repository = "https://github.com/rodekruis/kobo-connect"
packages = [{include = "clients"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiohttp = "*"
aiosignal = "*"
async-timeout = "*"
azure-monitor-opentelemetry-exporter = "*"
azure-core = "*"
azure-storage-blob = "*"
azure-cosmos = "*"
attrs = "*"
certifi = "*"
charset-normalizer = "*"
click = "*"
colorama = "*"
fastapi = "*"
frozenlist = "*"
httpx = "*"
idna = "*"
lxml = "*"
multidict = "*"
pandas = "*"
passlib = "*"
pypdf = ">=6.4.0"
python-docx = "*"
python-dotenv = "*"
python-jose = "*"
regex = "*"
requests = "*"
tiktoken = "*"
tqdm = "*"
urllib3 = ">=2.6.0"
yarl = "*"
uvicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"