[project]
name = "kobo-connect"
version = "0.0.2"
description = "kobo-connect"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  {name = "Jacopo Margutti", email = "jmargutti@redcross.nl"}
]
dependencies = [
  "aiohttp>=3.13.3",
  "aiosignal",
  "async-timeout",
  "azure-monitor-opentelemetry-exporter",
  "azure-core",
  "azure-storage-blob",
  "azure-cosmos<4.15.0",
  "attrs",
  "certifi",
  "charset-normalizer",
  "click",
  "colorama",
  "fastapi",
  "frozenlist",
  "httpx",
  "idna",
  "lxml",
  "multidict",
  "pandas",
  "passlib",
  "pypdf>=6.14.2",
  "python-docx",
  "python-dotenv",
  "python-jose",
  "regex",
  "requests",
  "tiktoken",
  "tqdm",
  "urllib3>=2.6.0",
  "yarl",
  "uvicorn",
]

[dependency-groups]
dev = [
  "pytest",
  "flake8",
]

[project.urls]
Repository = "https://github.com/rodekruis/kobo-connect"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clients", "routes", "utils"]